--- a/page1.html
+++ b/page1.html
@@ -1,19 +1,16 @@
 <!DOCTYPE html>
 <html lang="PT-BR">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tela de login</title>
+    <title>Bem-vindo!</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
-
 <body>
-    <!--Cabeçalho-->
     <nav class="navbar">
         <!--LOGO-->
         <label class="logo"><img src="/icons/logo.png" width="45" height="45" alt="Logo"></label>
@@ -31,18 +28,11 @@
         </ul>
     </nav>
 
-    <!--Corpo-->
-    <div class="main-container">
-        <form>
-            <div class="input"><input class="input" type="text" placeholder="&#xf007 &nbsp;&nbsp; User Name" required>
-            </div>
+    <!-- Corpo -->
 
-            <div class="input"><input class="input" type="password" placeholder="&#xf023 &nbsp;&nbsp; Password"
-                    required></div>
-
-            <div class="input"><input class="button" type="button" value="Get Started"><a href="page1.html"></a></div>
-        </form>
-    </div>
+    <section>
+        <h1 class="title">BEM VINDO!</h1>
+    </section>
 
     <!-- Rodapé -->
     <footer>
@@ -56,6 +46,6 @@
             <span class="copyright">&copy;2021 Key. All Rights Reserved | Design By Rabia Israr</span>
     </div>
 </footer>
+    
 </body>
-
 </html>
