adding homepage and more properties

--- a/page1.html
+++ b/page1.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="PT-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,14 +11,15 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
+
 <body>
     <nav class="navbar">
         <!--LOGO-->
-        <label class="logo"><img src="/icons/logo.png" width="45" height="45" alt="Logo"></label>
+        <label class="logo"><img src="/icons/logo.png" width="40" height="40" alt="Logo"></label>
 
         <!--Check do Hamburguer-->
         <input type="checkbox" id="check" unchecked>
-        <label for="check" class="checkbtn"><i class="material-icons">menu</i></label>
+        <label for="check" class="checkbtn"><i class="material-icons" style="font-size: 30px;">menu</i></label>
 
         <!--Menu-->
         <ul class="menu">
@@ -30,9 +32,10 @@
 
     <!-- Corpo -->
 
-    <section>
-        <h1 class="title">BEM VINDO!</h1>
-    </section>
+    <div class="main-container">
+        <form><button formaction="index.html" class="input-btn2" type="submit">Voltar para página inicial...</button>
+        </form>
+    </div>
 
     <!-- Rodapé -->
     <footer>
@@ -44,8 +47,9 @@
             </ul>
 
             <span class="copyright">&copy;2021 Key. All Rights Reserved | Design By Rabia Israr</span>
-    </div>
-</footer>
-    
+        </div>
+    </footer>
+
 </body>
+
 </html>
