--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <!--Cabeçalho-->
     <nav class="navbar">
         <!--LOGO-->
-        <label class="logo"><img src="/icons/logo.png" width="45" height="45" alt="Logo"></label>
+        <label class="logo"><img src="/icons/logo.png" width="40" height="40" alt="Logo"></label>
 
         <!--Check do Hamburguer-->
         <input type="checkbox" id="check" unchecked>
-        <label for="check" class="checkbtn"><i class="material-icons">menu</i></label>
+        <label for="check" class="checkbtn"><i class="material-icons" style="font-size: 30px;">menu</i></label>
 
         <!--Menu-->
         <ul class="menu">
@@ -34,13 +34,12 @@
     <!--Corpo-->
     <div class="main-container">
         <form>
-            <div class="input"><input class="input" type="text" placeholder="&#xf007 &nbsp;&nbsp; User Name" required>
+            <div><input class="input" type="text" placeholder="&#xf007 &nbsp;&nbsp; User Name" ></div>
+            <div><input class="input" type="password" placeholder="&#xf023 &nbsp;&nbsp; Password"></div>
+
+            <div>
+                <form><button formaction="page1.html" class="input-btn"  type="submit">Get Started</button></form>
             </div>
-
-            <div class="input"><input class="input" type="password" placeholder="&#xf023 &nbsp;&nbsp; Password"
-                    required></div>
-
-            <div class="input"><input class="button" type="button" value="Get Started"><a href="page1.html"></a></div>
         </form>
     </div>
 
@@ -54,8 +53,8 @@
             </ul>
 
             <span class="copyright">&copy;2021 Key. All Rights Reserved | Design By Rabia Israr</span>
-    </div>
-</footer>
+        </div>
+    </footer>
 </body>
 
 </html>
