--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     <!--Corpo-->
     <div class="main-container">
         <form>
-            <div><input class="input" type="text" placeholder="&#xf007 &nbsp;&nbsp; User Name" ></div>
-            <div><input class="input" type="password" placeholder="&#xf023 &nbsp;&nbsp; Password"></div>
+            <div><input class="input" type="text" placeholder="&#xf007 &nbsp;&nbsp; User Name" required ></div>
+            <div><input class="input" type="password" placeholder="&#xf023 &nbsp;&nbsp; Password" required></div>
 
             <div>
                 <form><button formaction="page1.html" class="input-btn"  type="submit">Get Started</button></form>
