--- a/page1.html
+++ b/page1.html
@@ -15,7 +15,7 @@
 <body>
     <nav class="navbar">
         <!--LOGO-->
-        <label class="logo"><img src="/icons/logo.png" width="40" height="40" alt="Logo"></label>
+        <label class="logo"><img src="./icons/logo.png" width="40" height="40" alt="Logo"></label>
 
         <!--Check do Hamburguer-->
         <input type="checkbox" id="check" unchecked>
